// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/MenuMain should have correct menu items 1`] = `
.c4 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: block;
  width: 20px;
  height: 20px;
  line-height: 20px;
  font-style: normal;
  text-align: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  padding-left: 5px;
  background: #f0f0f0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c2:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c2:disabled {
  color: #c0c0c0;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border-bottom: 1px solid #c0c0c0;
}

.c1:last-child {
  border-bottom: none;
}

.c3 {
  width: 100%;
  background: #c0c0c0;
  text-align: left;
}

.c3:hover {
  background-color: #c0c0c0;
}

.c6 {
  width: 100%;
  text-align: left;
}

<div>
  <ul
    class="c0"
  >
    <li
      class="c1"
    >
      <a
        class="c2 c3"
        href="/?folder="
      >
        <i
          class="c4"
        >
          ★
        </i>
        <span
          class="c5"
        >
          Všechny úkoly
        </span>
      </a>
    </li>
    <li
      class="c1"
    >
      <a
        class="c2 c6"
        href="/?folder=A"
      >
        <i
          class="c4"
        >
          ★
        </i>
        <span
          class="c5"
        >
          Folder A
        </span>
      </a>
    </li>
    <li
      class="c1"
    >
      <a
        class="c2 c6"
        href="/?folder=B"
      >
        <i
          class="c4"
        >
          ★
        </i>
        <span
          class="c5"
        >
          Folder B
        </span>
      </a>
    </li>
    <li
      class="c1"
    >
      <a
        class="c2 c6"
        href="/folder/list"
      >
        <i
          class="c4"
        >
          ✎
        </i>
        <span
          class="c5"
        >
          Složky
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`components/MenuMain should render correctly 1`] = `
.c4 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: block;
  width: 20px;
  height: 20px;
  line-height: 20px;
  font-style: normal;
  text-align: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  padding-left: 5px;
  background: #f0f0f0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c2:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c2:disabled {
  color: #c0c0c0;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border-bottom: 1px solid #c0c0c0;
}

.c1:last-child {
  border-bottom: none;
}

.c3 {
  width: 100%;
  background: #c0c0c0;
  text-align: left;
}

.c3:hover {
  background-color: #c0c0c0;
}

.c6 {
  width: 100%;
  text-align: left;
}

<div>
  <ul
    class="c0"
  >
    <li
      class="c1"
    >
      <a
        class="c2 c3"
        href="/?folder="
      >
        <i
          class="c4"
        >
          ★
        </i>
        <span
          class="c5"
        >
          Všechny úkoly
        </span>
      </a>
    </li>
    <li
      class="c1"
    >
      <a
        class="c2 c6"
        href="/folder/list"
      >
        <i
          class="c4"
        >
          ✎
        </i>
        <span
          class="c5"
        >
          Složky
        </span>
      </a>
    </li>
  </ul>
</div>
`;
